--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +13,338 @@
     <title>portfolio</title>
 </head>
 <body>
-    <a href="HOAM_MUSEUM_OF_ART/index.html"></a>
-    <a href="KS_WALLCOVERINGS/index.html"></a>
+    <div id="wrap">
+        <header>
+            <div class="wrapper_2">
+                <nav class="gnb">
+                    <div class="gnb_wrap">
+                        <ul>
+                            <li data-link="hoam_move"><a href="#none"><span>HOAM</span></a></li>
+                            <li data-link="ks_move"><a href="#none"><span>KS벽지</span></a></li>
+                            <li data-link="dian_move"><a href="#none"><span>DIAN</span></a></li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
+        </header>
+        <div class="container">
+            <div class="wrapper">
+                <div class="visual">
+                    <div class="photo"><span></span></div>
+                    <div class="title">
+                        <em class="top">탈피<br>
+                        [MOLT]</em>
+                        <em class="bot"><span class="top">파충류, 곤충류 따위가<br></span>
+                            <strong>성장하기 위해</strong><br>
+                            <span class="bot">허물이나 껍질을 벗음</em></span>
+                    </div>
+                    <div class="txt">
+                        <span class="left">I am MO</span>
+                        <span class="right">LTING.</span>
+                    </div>
+                </div>
+                <section class="slough">
+                    <div class="tit">
+                        <h2>SLOUGHS</h2>
+                        <span>:허물</span>
+                    </div>
+                    <div class="box_hoam">
+                        <a href="#none" data-link="hoam_move">
+                            <div class="box_hoam_txt">
+                                <div class="txt">
+                                    <div class="tit">
+                                        <h3>HOAM ART MUSEUM</h3>
+                                    </div>
+                                    <div class="info_1">
+                                        <span>24.03 ~ 24.03</span>
+                                        <span>HOMEPAGE RENEWAL</span>
+                                    </div>
+                                    <div class="info_2">
+                                        <span>Contribution: 100%</span>
+                                        <span>Font: Roboto, Pretendard</span>
+                                        <span>Tool: Adobe XD</span>
+                                    </div>
+                                </div>
+                                <div class="btn">
+                                    <button>GO TO SHOW</button>
+                                </div>
+                            </div> 
+                        </a>
+                        <div class="box_hoam_photo">
+                            <div class="photo">
+                                <img src="images/sloughs_1.png" alt="">
+                            </div>
+                        </div> 
+                    </div>
+                    <div class="box_ks">
+                        <div class="box_ks_photo">
+                            <div class="photo">
+                                <img src="images/sloughs_2.png" alt="">
+                            </div>
+                        </div>
+                        <a href="#none" data-link="ks_move">
+                            <div class="box_ks_txt">
+                                <div class="txt">
+                                    <div class="tit">
+                                        <h3>KS 벽지</h3>
+                                    </div>
+                                    <div class="info_1">
+                                        <span>24.04 ~ 24.04</span>
+                                        <span>HOMEPAGE RENEWAL</span>
+                                    </div>
+                                    <div class="info_2">
+                                        <span>Contribution: 100%</span>
+                                        <span>Font: Noto Sans KR</span>
+                                        <span>Tool: Figma</span>
+                                    </div>
+                                </div>
+                                <div class="btn">
+                                    <button>GO TO SHOW</button>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="box_dian">
+                        <a href="#none" data-link="dian_move">
+                            <div class="box_dian_txt">
+                                <div class="txt">
+                                    <div class="tit">
+                                        <h3>DIAN</h3>
+                                    </div>
+                                    <div class="info_1">
+                                        <span>24.04 ~ 24.04</span>
+                                        <span>HOMEPAGE RENEWAL</span>
+                                    </div>
+                                    <div class="info_2">
+                                        <span>Contribution: 100%</span>
+                                        <span>Font: Monument, Gmarket Sans</span>
+                                        <span>Tool: Figma</span>
+                                    </div>
+                                </div>
+                                <div class="btn">
+                                    <button>GO TO SHOW</button>
+                                </div>
+                            </div> 
+                        </a>
+                        <div class="box_dian_photo">
+                            <div class="photo">
+                                <img src="images/sloughs_3.png" alt="">
+                            </div>
+                        </div> 
+                    </div>
+                </section>
+                <section class="hoam">
+                    <div class="tit">
+                        <h2>HOAM ART MUSEUM</h2>
+                    </div>
+                    <div class="whole">
+                        <div class="before">
+                            <div class="sub_tit">
+                                <h3>BEFORE MOLTING</h3>
+                            </div>
+                            <div class="goal">
+                                <div class="inner">
+                                    <div class="photo">
+                                        <img src="images/hoam_1.png" alt="">
+                                    </div>
+                                    <div class="txt">
+                                        <strong>RENEWAL GOAL</strong>
+                                        <span>불편한 UX 보완</span>
+                                        <span>부족한 컨텐츠 추가</span>
+                                        <span>불필요한 요소들 제거</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="after" data-menu="hoam_move">
+                            <div class="top">
+                                <div class="sub_tit">
+                                    <h3>AFTER MOLTING</h3>
+                                </div>
+                                <div class="btn">
+                                    <a href="HOAM_MUSEUM_OF_ART/index.html" target="_blank" title="새 창"><span>GO TO PAGE</span></a>
+                                </div>
+                            </div>
+                            <div class="main">
+                                <div class="page">
+                                    <img src="images/hoam_2.png" alt="">
+                                </div>
+                                <div class="right_txt">
+                                    <div class="des">
+                                        <span>정확히 구분되지 않았던 상단 메뉴를 <strong>보기 쉽게</strong> 재구성했습니다.</span>
+                                    </div>
+                                    <div class="des">
+                                        <span>위로 이동시켜 <strong>가시성</strong>을 높였습니다.</span>
+                                    </div>
+                                    <div class="des">마우스 오버 시 화살표가 오른쪽으로 이동하는<br>
+                                        반복 애니메이션을 추가해 <strong>가시성</strong>을 높였습니다.</div>
+                                    <div class="des">사진속 텍스트와 그림자를 제거해<br>
+                                        사진을 더 <strong>강조</strong>했습니다.</div>
+                                </div>
+                                <div class="left_txt">
+                                    <div class="des">기존의 단조롭던 전시 공고를 보다 <strong>다채롭게</strong> 구성했습니다.</div>
+                                    <div class="des">기존의 공지보다 더 <strong>자주 포스팅</strong>되고 있는 SNS로 대체했습니다.</div>
+                                    <div class="des">글로만 적혀있던 주소를 <strong>보기 쉽게</strong> 지도로 한 번 더 표시했습니다.</div>
+                                </div>
+                            </div>
+                            <div class="sub_page">
+                                <div class="left_photo">
+                                    <img src="images/hoam_3.png" alt="">
+                                </div>
+                                <div class="right_photo">
+                                    <img src="images/hoam_4.png" alt="">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section class="ks">
+                    <div class="tit">
+                        <h2>KS벽지</h2>
+                    </div>
+                    <div class="whole">
+                        <div class="before">
+                            <div class="sub_tit">
+                                <h3>BEFORE MOLTING</h3>
+                            </div>
+                            <div class="goal">
+                                <div class="inner">
+                                    <div class="txt">
+                                        <strong>RENEWAL GOAL</strong>
+                                        <span>벽지 선택에 고민을 덜도록</span>
+                                        <span>더 많은 인테리어 사진 추가</span>
+                                        <span>기존의 차분한 배치를 트렌디한 배치로 변경</span>
+                                    </div>
+                                    <div class="photo">
+                                        <img src="images/ks_1.png" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="after" data-menu="ks_move">
+                            <div class="top">
+                                <div class="sub_tit">
+                                    <h3>AFTER MOLTING</h3>
+                                </div>
+                                <div class="btn">
+                                    <a href="KS_WALLCOVERINGS/index.html" target="_blank" title="새 창"><span>GO TO PAGE</span></a>
+                                </div>
+                            </div>
+                            <div class="main">
+                                <div class="page_1">
+                                    <img src="images/ks_2.png" alt="">
+                                </div>
+                                <div class="page_2">
+                                    <img src="images/ks_3.png" alt="">
+                                </div>
+                                <div class="right_txt">
+                                    <div class="des">
+                                        <span>오버 중인 메뉴에 박스를 넣어 <strong>가시성</strong>을 높였습니다.</span>
+                                    </div>
+                                    <div class="des">
+                                        <span>방문자들의 <strong>이목을 끌기 위해</strong> 트렌디한 배치를 사용했습니다.</span>
+                                    </div>
+                                </div>
+                                <div class="left_txt">
+                                    <div class="des">
+                                        <span>스와치를 통해 현재 벽지를 <strong>직관적</strong>으로 표현했습니다.</span>
+                                    </div>
+                                    <div class="des">
+                                        <span><strong>혼선을 줄이기 위해</strong> 제품 설명을 덧붙였습니다.</span>
+                                    </div>
+                                    <div class="des">
+                                        <span>간략한 소개로 브랜드의 <strong>아이덴티티</strong>를 나타냈습니다.</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section class="dian">
+                    <div class="tit">
+                        <h2>DIAN</h2>
+                    </div>
+                    <div class="whole">
+                        <div class="before">
+                            <div class="sub_tit">
+                                <h3>BEFORE MOLTING</h3>
+                            </div>
+                            <div class="goal">
+                                <div class="inner">
+                                    <div class="photo">
+                                        <img src="images/dian_1.png" alt="">
+                                    </div>
+                                    <div class="txt">
+                                        <strong>RENEWAL GOAL</strong>
+                                        <span>설명 위주의 너무 긴 텍스트들을</span>
+                                        <span>사진 위주로 간략하게 정리</span>
+                                        <span>세로 정렬을 가로 정렬로 변경해 스크롤 최소화</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="after"  data-menu="dian_move">
+                            <div class="top">
+                                <div class="sub_tit">
+                                    <h3>AFTER MOLTING</h3>
+                                </div>
+                                <div class="btn">
+                                    <a href="DIAN/index.html" target="_blank" title="새 창"><span>GO TO PAGE</span></a>
+                                </div>
+                            </div>
+                            <div class="main">
+                                <div class="page">
+                                    <img src="images/dian_2.png" alt="">
+                                </div>
+                                <div class="page_2">
+                                    <div class="flex">
+                                        <img src="images/dian_3.png" alt="">
+                                        <img src="images/dian_4.png" alt="">
+                                    </div>
+                                </div>
+                                <div class="right_txt">
+                                    <div class="des">
+                                        <span>오버했을때의<br>
+                                            디자인들 입니다.</span>
+                                    </div>
+                                </div>
+                                <div class="left_txt">
+                                    <div class="des">
+                                        <span>메뉴는 스크롤시 <strong>고정</strong>되어 움직입니다.</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </div>
+        <footer>
+            <div class="info">
+                <div class="con">
+                    <strong>Contact:</strong>
+                    <span>pascal960@naver.com</span>
+                    <span>010.6707.2503</span>
+                </div>
+                <div class="abi">
+                    <strong>Ability:</strong>
+                    <span>Figma,</span>
+                    <span>XD,</span>
+                    <span>Photoshop,</span>
+                    <span>Illustrator,</span>
+                    <span>html,</span>
+                    <span>css,</span>
+                    <span>jquery</span>
+                </div>
+                <div class="cer">
+                    <strong>Certificate:</strong>
+                    <span>웹디자인기능사,</span>
+                    <span>GTQ 1급</span>
+                </div>
+                <div class="copyright">ⓒ2024 KIMJAEMIN ALL RIGHTS RESERVED.</div>
+            </div>
+            <div class="thank">끝까지 봐주셔서 감사합니다.</div>
+        </footer>
+    </div>
 </body>
 </html>
