--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                             <li data-link="hoam_move"><a href="#none"><span>HOAM</span></a></li>
                             <li data-link="ks_move"><a href="#none"><span>KS벽지</span></a></li>
                             <li data-link="dian_move"><a href="#none"><span>DIAN</span></a></li>
+                            <li data-link="kimm_move"><a href="#none"><span>KIMM</span></a></li>
                         </ul>
                     </div>
                 </nav>
@@ -131,6 +132,34 @@
                                 <img src="images/sloughs_3.png" alt="">
                             </div>
                         </div> 
+                    </div>
+                    <div class="box_kimm">
+                        <div class="box_kimm_photo">
+                            <div class="photo">
+                                <img src="images/sloughs_4.png" alt="">
+                            </div>
+                        </div>
+                        <a href="#none" data-link="kimm_move">
+                            <div class="box_kimm_txt">
+                                <div class="txt">
+                                    <div class="tit">
+                                        <h3>KIMM</h3>
+                                    </div>
+                                    <div class="info_1">
+                                        <span>24.04 ~ 24.04</span>
+                                        <span>HOMEPAGE RENEWAL</span>
+                                    </div>
+                                    <div class="info_2">
+                                        <span>Contribution: 100%</span>
+                                        <span>Font: KIMM</span>
+                                        <span>Tool: Figma</span>
+                                    </div>
+                                </div>
+                                <div class="btn">
+                                    <button>GO TO SHOW</button>
+                                </div>
+                            </div>
+                        </a>
                     </div>
                 </section>
                 <section class="hoam">
@@ -313,10 +342,82 @@
                                         <span>메뉴는 스크롤시 <strong>고정</strong>되어 움직입니다.</span>
                                     </div>
                                 </div>
+                                <div class="mobile_page">
+                                    <div class="flex">
+                                        <div class="txt">
+                                            <h3>ONLY DESIGN</h3>
+                                        </div>
+                                        <div class="photo">
+                                            <img src="images/dian_5.png" alt="">
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </section>
+                <section class="kimm">
+                    <div class="tit">
+                        <h2>KIMM</h2>
+                    </div>
+                    <div class="whole">
+                        <div class="before">
+                            <div class="sub_tit">
+                                <h3>BEFORE MOLTING</h3>
+                            </div>
+                            <div class="goal">
+                                <div class="inner">
+                                    <div class="txt">
+                                        <strong>RENEWAL GOAL</strong>
+                                        <span>간략하게 정리된 컨텐츠들을</span>
+                                        <span>풀어서 나열하고</span>
+                                        <span>상세한 정보를 제공</span>
+                                    </div>
+                                    <div class="photo">
+                                        <img src="images/kimm_1.png" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="after" data-menu="kimm_move">
+                            <div class="top">
+                                <div class="sub_tit">
+                                    <h3>AFTER MOLTING</h3>
+                                </div>
+                                <div class="btn">
+                                    <span>ONLY DESIGN</span>
+                                </div>
+                            </div>
+                            <div class="main">
+                                <div class="page">
+                                    <img src="images/kimm_2.png" alt="">
+                                </div>
+                                <div class="right_txt">
+                                    <div class="des">많은 연구소들을 <strong>알기 쉽도록</strong><br>
+                                        연상되는 아이콘들과 그룹 지어<br>
+                                        배치했습니다.</div>
+                                    <div class="des">모든 자세히보기는<br>마우스 오버 시 선이 연장되도록 디자인했습니다.</div>
+                                    <div class="des">항목이 많은 연구활동 메뉴는 가로로 배치하여<br>
+                                        <strong>한 화면에 보이도록</strong> 디자인했습니다.</div>
+                                </div>
+                                <div class="left_txt">
+                                    <div class="des">가장 <strong>많이 이용</strong>하는<br>
+                                        서치 바를 중앙에 배치했습니다.</div>
+                                    <div class="des">현재 어떤 항목을 보고 있는지<br>
+                                        <strong>알기 쉽도록</strong> 크기로 구별했습니다.</div>
+                                    <div class="des">비교적 항목이 적은 다른 메뉴들은<br>
+                                        세로 배치로 여유롭게 배치했습니다.</div>
+                                </div>
+                                <div class="menu_page">
+                                    <img src="images/kimm_3.png" alt="">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </div>
+            <div class="mobile_page">
+                <img src="images/kimm_4.png" alt="">
             </div>
         </div>
         <footer>
