--- a/index.html
+++ b/index.html
@@ -399,17 +399,22 @@
                                     <div class="des">모든 자세히보기는<br>마우스 오버 시 선이 연장되도록 디자인했습니다.</div>
                                     <div class="des">항목이 많은 연구활동 메뉴는 가로로 배치하여<br>
                                         <strong>한 화면에 보이도록</strong> 디자인했습니다.</div>
+                                    <div class="des">메뉴 클릭 시 검색창은<br>
+                                        위로 이동합니다.</div>
+                                    <div class="des">스크롤 시 gnb는 픽스되고<br>
+                                        검색창은 상단에 고정됩니다.</div>
                                 </div>
                                 <div class="left_txt">
                                     <div class="des">가장 <strong>많이 이용</strong>하는<br>
-                                        서치 바를 중앙에 배치했습니다.</div>
+                                        검색 창을 중앙에 배치했습니다.</div>
                                     <div class="des">현재 어떤 항목을 보고 있는지<br>
                                         <strong>알기 쉽도록</strong> 크기로 구별했습니다.</div>
                                     <div class="des">비교적 항목이 적은 다른 메뉴들은<br>
                                         세로 배치로 여유롭게 배치했습니다.</div>
                                 </div>
                                 <div class="menu_page">
-                                    <img src="images/kimm_3.png" alt="">
+                                    <img src="images/kimm_3.png" alt="" class="first">
+                                    <img src="images/kimm_4.png" alt="" class="second">
                                 </div>
                             </div>
                         </div>
