--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                             <li data-link="ks_move"><a href="#none"><span>KS벽지</span></a></li>
                             <li data-link="dian_move"><a href="#none"><span>DIAN</span></a></li>
                             <li data-link="kimm_move"><a href="#none"><span>KIMM</span></a></li>
+                            <li data-link="surgery_move"><a href="#none"><span>SURGERY</span></a></li>
                         </ul>
                     </div>
                 </nav>
@@ -160,6 +161,38 @@
                                 </div>
                             </div>
                         </a>
+                    </div>
+                    <div class="box_surgery">
+                        <a href="#none" data-link="surgery_move">
+                            <div class="box_surgery_txt">
+                                <div class="txt">
+                                    <div class="tit">
+                                        <h3>SURGERY</h3>
+                                    </div>
+                                    <div class="info_1">
+                                        <span>24.04 ~ 24.04</span>
+                                        <span>HOMEPAGE RENEWAL</span>
+                                    </div>
+                                    <div class="info_2">
+                                        <div class="top">
+                                            <span>Contribution: 100%</span>
+                                            <span>Tool: Photoshop, Figma</span>
+                                        </div>
+                                        <div class="bottom">
+                                            <span>Font: Times New Roman, Nanum Myeongjo</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="btn">
+                                    <button>GO TO SHOW</button>
+                                </div>
+                            </div> 
+                        </a>
+                        <div class="box_surgery_photo">
+                            <div class="photo">
+                                <img src="images/sloughs_5.png" alt="">
+                            </div>
+                        </div> 
                     </div>
                 </section>
                 <section class="hoam">
@@ -418,11 +451,86 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="mobile_page">
+                            <img src="images/kimm_5.png" alt="">
+                        </div>
                     </div>
                 </section>
-            </div>
-            <div class="mobile_page">
-                <img src="images/kimm_5.png" alt="">
+                <section class="surgery">
+                    <div class="tit">
+                        <h2>SURGERY</h2>
+                    </div>
+                    <div class="whole">
+                        <div class="before">
+                            <div class="sub_tit">
+                                <h3>BEFORE MOLTING</h3>
+                            </div>
+                            <div class="goal">
+                                <div class="inner">
+                                    <div class="photo">
+                                        <img src="images/surgery_1.png" alt="">
+                                    </div>
+                                    <div class="txt">
+                                        <strong>RENEWAL GOAL</strong>
+                                        <span>작아서 보기 힘든 폰트들을</span>
+                                        <span>수정하고 브랜드 컬러와 로고를</span>
+                                        <span>추가하여 써저리만의 느낌을 강조</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="after"  data-menu="surgery_move">
+                            <div class="top">
+                                <div class="sub_tit">
+                                    <h3>AFTER MOLTING</h3>
+                                </div>
+                                <div class="btn">
+                                    <span>ONLY DESIGN</span></a>
+                                </div>
+                            </div>
+                            <div class="main">
+                                <div class="page">
+                                    <img src="images/surgery_2.png" alt="">
+                                </div>
+                                <div class="page_2">
+                                    <img src="images/surgery_3.png" alt="">
+                                    <img src="images/surgery_4.png" alt="">
+                                    <img src="images/surgery_5.png" alt="">
+                                    <img src="images/surgery_6.png" alt="">
+                                </div>
+                                <div class="right_txt">
+                                    <div class="des">
+                                        <span>해체주의 브랜드인 써저리의 특색을 살려<br>
+                                            폰트에 <strong>입체감</strong>을 주도록 디자인하였습니다.</span>
+                                    </div>
+                                    <div class="des">
+                                        <span>상품을 보는데 방해가 되지 않을 정도로<br>
+                                            배경에 로고를 넣어 디자인하였습니다.</span>
+                                    </div>
+                                </div>
+                                <div class="left_txt">
+                                    <div class="des">
+                                        <span>써저리의 <strong>브랜드 컬러</strong>인<br>
+                                            초록색을 사용하였습니다.</span>
+                                    </div>
+                                    <div class="des">
+                                        <span>브라우저 크기와 상관없이 <strong>한눈에 보이도록</strong><br>
+                                            위아래가 아닌 양옆으로 배열했습니다.</span>
+                                    </div>
+                                    <div class="des">
+                                        <span>현재 보고 있는 페이지를<br>
+                                            색으로 표시했습니다.</span>
+                                    </div>
+                                </div>
+                                <div class="mobile_page">
+                                    <div class="photo">
+                                        <img src="images/surgery_7.png" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
             </div>
         </div>
         <footer>
