--- a/index.html
+++ b/index.html
@@ -36,9 +36,11 @@
                     <div class="title">
                         <em class="top">탈피<br>
                         [MOLT]</em>
-                        <em class="bot"><span class="top">파충류, 곤충류 따위가<br></span>
+                        <em class="bot">
+                            <span class="top">파충류, 곤충류 따위가<br></span>
                             <strong>성장하기 위해</strong><br>
-                            <span class="bot">허물이나 껍질을 벗음</em></span>
+                            <span class="bot">허물이나 껍질을 벗음</span>
+                        </em>
                     </div>
                     <div class="txt">
                         <span class="left">I am MO</span>
@@ -63,12 +65,9 @@
                                     </div>
                                     <div class="info_2">
                                         <span>Contribution: 100%</span>
-                                        <span>Font: Roboto, Pretendard</span>
                                         <span>Tool: Adobe XD</span>
+                                        <span>Font: Roboto, Pretendard</span>
                                     </div>
-                                </div>
-                                <div class="btn">
-                                    <button>GO TO SHOW</button>
                                 </div>
                             </div> 
                         </a>
@@ -96,12 +95,9 @@
                                     </div>
                                     <div class="info_2">
                                         <span>Contribution: 100%</span>
-                                        <span>Font: Noto Sans KR</span>
                                         <span>Tool: Figma</span>
+                                        <span>Font: Noto Sans KR</span>
                                     </div>
-                                </div>
-                                <div class="btn">
-                                    <button>GO TO SHOW</button>
                                 </div>
                             </div>
                         </a>
@@ -119,12 +115,9 @@
                                     </div>
                                     <div class="info_2">
                                         <span>Contribution: 100%</span>
-                                        <span>Font: Monument, Gmarket Sans</span>
                                         <span>Tool: Figma</span>
+                                        <span>Font: Monument, Gmarket Sans</span>
                                     </div>
-                                </div>
-                                <div class="btn">
-                                    <button>GO TO SHOW</button>
                                 </div>
                             </div> 
                         </a>
@@ -152,12 +145,9 @@
                                     </div>
                                     <div class="info_2">
                                         <span>Contribution: 100%</span>
-                                        <span>Font: KIMM</span>
                                         <span>Tool: Figma</span>
+                                        <span>Font: KIMM</span>
                                     </div>
-                                </div>
-                                <div class="btn">
-                                    <button>GO TO SHOW</button>
                                 </div>
                             </div>
                         </a>
@@ -174,17 +164,10 @@
                                         <span>HOMEPAGE RENEWAL</span>
                                     </div>
                                     <div class="info_2">
-                                        <div class="top">
-                                            <span>Contribution: 100%</span>
-                                            <span>Tool: Photoshop, Figma</span>
-                                        </div>
-                                        <div class="bottom">
-                                            <span>Font: Times New Roman, Nanum Myeongjo</span>
-                                        </div>
+                                        <span>Contribution: 100%</span>
+                                        <span>Tool: Photoshop, Figma</span>
+                                        <span>Font: Times New Roman, Nanum Myeongjo</span>
                                     </div>
-                                </div>
-                                <div class="btn">
-                                    <button>GO TO SHOW</button>
                                 </div>
                             </div> 
                         </a>
